--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,13 @@
 <body>
   <header class="site-header">
     <h1 class="brand">Garage Manager</h1>
-    <nav class="site-nav">
-      <a href="/view/cars">Cars</a>
-      <a href="/view/users">Users</a>
-      <a href="/view/services">Services</a>
-    </nav>
+   <nav class="site-nav">
+  <a href="/view/cars">Cars</a>
+  <a href="/view/users">Users</a>
+  <a href="/view/services">Services</a>
+  <a href="/view/documents">Documents</a>
+</nav>
+
   </header>
 
   <main class="container">
